# timer_example

./: CMakeLists.txt  Race_Timer_BLE_Integration_Guide.docx  Race_Timer_BLE_Integration_Guide.md  prj.conf
.claude/: settings.local.json
boards/: raytac_mdbt50q_db_40_nrf52840.conf  raytac_mdbt50q_db_40_nrf52840.overlay  xiao_ble_nrf52840.conf  xiao_ble_nrf52840.overlay
src/: ble_race_service.c  ble_race_service.h  buttons.c  buttons.h  display.c  display.h  leds.c  leds.h  main.c  race_manager.c  race_manager.h  race_timer.c  race_timer.h
tools/: race_timer_gui.py  requirements.txt
